# lifesupply-command-center

./: .dockerignore  .env.example  .gitignore  .prettierignore  00_START_HERE_FOR_CLAUDE_CODE.md  00_START_HERE_FOR_CLAUDE_CODE_BATCH_2.md  CLAUDE.md  CLAUDE_APPENDIX_BATCH_2.md  Dockerfile  MANIFEST.md  MANIFEST_BATCH_2.md  README.md  docker-compose.yml  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  render.yaml  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
bc-customer-enrichment/: .env.example  .gitignore  pyproject.toml
bc-customer-enrichment/src/bc_enrichment/: cache.py  cli.py  client.py  config.py  csv_writer.py  dates.py  models.py  runner.py  xlsx_export.py
bc-customer-enrichment/src/bc_enrichment/enrichers/: customer_groups.py  group_a_customer.py  group_b_orders.py  group_c_geography.py  group_d_products.py  group_e_refunds.py  group_f_b2b.py  group_g_engagement.py
bc-customer-enrichment/tests/: test_cache.py  test_client.py  test_combined_csv.py  test_csv_writer.py  test_customer_groups.py  test_dates.py  test_group_a.py  test_group_b.py  test_group_c.py  test_group_d.py  test_group_e.py  test_group_f.py  test_group_g.py  test_payment_methods.py  test_xlsx_export.py
docs/: 01_PROJECT_OVERVIEW.md  02_PRODUCT_REQUIREMENTS_DOCUMENT.md  03_TECHNICAL_ARCHITECTURE.md  04_DATABASE_SCHEMA.md  05_INTEGRATION_MAP.md  06_SECURITY_AND_PERMISSIONS.md  07_MVP_IMPLEMENTATION_PLAN.md  08_UI_UX_SPECIFICATION.md  09_AI_FEATURES_AND_GUARDRAILS.md  10_BROWSER_AUTOMATION_AND_SUPPLIER_WORKFLOWS.md  11_REPORTING_REQUIREMENTS.md  (+11 more)
(+320 files in other folders)
