[project]
name = "bc-customer-enrichment"
version = "0.1.0"
description = "Enriched per-customer export from BigCommerce — LifeSupply / Wellmart / Store3"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.6.0",
    "xlsxwriter>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.1",
    "mypy>=1.8.0",
]

[project.scripts]
bc-enrichment = "bc_enrichment.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bc_enrichment = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
packages = ["bc_enrichment"]

[[tool.mypy.overrides]]
module = "xlsxwriter"
ignore_missing_imports = true
